--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,4 +8,4 @@ anyhow = "1.0.48"
 log = "0.4.14"
 env_logger = "0.9.0"
 
-tokio = { version="1.14.0", features=["macros", "net", "rt-multi-thread"] }
+tokio = { version="1.14.0", features=["macros", "net", "rt-multi-thread", "io-util"] }
