--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,3 +10,6 @@ env_logger = "0.9.0"
 
 bytes = "1.1.0"
 tokio = { version="1.14.0", features=["macros", "net", "rt-multi-thread", "io-util"] }
+
+serde = "1.0.130"
+serde_derive = "1.0.130"
