--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ log = "0.4.14"
 env_logger = "0.9.0"
 
 bytes = "1.1.0"
+futures = "0.3.18"
 tokio = { version="1.14.0", features=["macros", "net", "rt-multi-thread", "io-util"] }
 
 serde = "1.0.130"
